--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@atom/*": ["./src/components/atom/*"],
+      "@molecule/*": ["./src/components/molecule/*"],
+      "@organism/*": ["./src/components/organism/*"],
+      "@styles/*": ["./styles/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
